# paleta

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LEARNINGS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
bench/: exif-thumb.bench.ts  jpeg-decode.bench.ts  quantize.bench.ts  wasm.bench.ts
bench/results/: 2026-04-17-final.md  2026-04-17-full-sweep.md  2026-04-17-initial.md  2026-04-17-jpeg-decode.md  2026-04-17-wasm.md  2026-04-17-wu-packed.md  2026-04-20-workers-isolate.md  2026-04-24-cache-hit.md  2026-04-24-cold-start.md  2026-04-24.md
crates/paleta-core/: Cargo.toml  README.md
crates/paleta-core/src/: histogram.rs  jpeg_dc.rs  lib.rs  wu.rs
examples/demo/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.worker.json  vite.config.ts  wrangler.jsonc
examples/demo/app/: App.tsx  styles.css
examples/demo/src/: worker.ts
examples/minimal-worker/: README.md  package.json  wrangler.jsonc
examples/minimal-worker/scripts/: gen-bench-fixture.mjs
examples/minimal-worker/src/: bench-fixture.ts  worker.ts
examples/rpc-service/: README.md  package.json  tsconfig.json
scripts/: bench-cold-start.sh  build-wasm.sh  find-panic.mjs  gen-exif-fixture.mjs  publish.sh
test/: crosscolo-cache.test.ts  exif-pipeline.test.ts  fixtures.test.ts  jpeg-dc-fuzz.test.ts  jpeg-dc-pipeline.test.ts  jpeg-dc.test.ts  oklab.test.ts  pipeline.test.ts  quantize.test.ts  sniff.test.ts  wasm.test.ts
test/helpers/: fixtures.ts  png.ts
test/stubs/: cloudflare-workers.ts
(+22 files in other folders)
