[package]
name = "paleta-core"
version = "0.1.0-alpha.0"
edition = "2021"
description = "SIMD-accelerated Wu color quantizer for paleta. Compiles to WASM."
license = "MIT"
repository = "https://github.com/Kenth06/paleta"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# SIMD-friendly primitives. `wide` picks up simd128 when -C target-feature=+simd128 is set.
wide = "0.7"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Enabled by the release build script. See scripts/build-wasm.sh.
# rustc flags: -C target-feature=+simd128
