[package]
name = "paleta-core"
version = "0.1.0-alpha.0"
edition = "2021"
description = "SIMD-accelerated Wu color quantizer for paleta. Compiles to WASM."
license = "MIT"
repository = "https://github.com/Kenth06/paleta"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
